update pic links

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <h2>My projects</h2>
         <div class="grid">
             <a class="project-tile" href="https://13ththief.github.io/fcc-tribute-page/index.html" target="_blank" rel="noopener noreferrer">
-                <img src="https://github.com/13thThief/fcc-portfolio/blob/master/images/avicii.PNG" alt="Avicii Tribute" />
+                <img src="https://raw.githubusercontent.com/13thThief/fcc-portfolio/blob/master/images/avicii.PNG" alt="Avicii Tribute" />
                 <p class="title">Tribute Page</p>
             </a>
             <a class="project-tile" href="https://13ththief.github.io/d3-data-visualization/tree-map/index.html" target="_blank" rel="noopener noreferrer">
-                <img src="https://github.com/13thThief/fcc-portfolio/blob/master/images/d3.PNG" alt="Data Viz." />
+                <img src="https://raw.githubusercontent.com/13thThief/fcc-portfolio/blob/master/images/d3.PNG" alt="Data Viz." />
                 <p class="title">Data Viz.</p>
             </a>
             <a class="project-tile" href="https://13ththief.github.io/pomodoro-clock/index.html" target="_blank" rel="noopener noreferrer">
-                <img src="https://github.com/13thThief/fcc-portfolio/blob/master/images/pomodoro.PNG" alt="Pomodoro" />
+                <img src="https://raw.githubusercontent.com/13thThief/fcc-portfolio/blob/master/images/pomodoro.PNG" alt="Pomodoro" />
                 <p class="title">Pomodoro Clock</p>
             </a>
             <a class="project-tile" href="https://13ththief.github.io/markdown-previewer/index.html" target="_blank" rel="noopener noreferrer">
-                <img src="https://github.com/13thThief/fcc-portfolio/blob/master/images/markdown.PNG" alt="Markdown" />
+                <img src="https://raw.githubusercontent.com/13thThief/fcc-portfolio/blob/master/images/markdown.PNG" alt="Markdown" />
                 <p class="title">Markdown Previewer</p>
             </a>
         </div>
